--- a/views/index.erb
+++ b/views/index.erb
@@ -69,7 +69,6 @@
       </div>
 
       <table id="data" class="table1" border="1" >
-	
 	<tr bgcolor="#FFD5EC">
 	  <th></th>
 	  <th>10-11</th>
@@ -551,7 +550,6 @@
 	  <td></td>
 	</tr>
 
-	
 	<p><font size="4">名前（必須）<br>
 	    <input type="text" name="name" size="50" class="ex1" required>
 	</p>
@@ -564,7 +562,8 @@
 	
       </table>
       <br><br>
-      <p><input type="submit" value="送信" class="ex3"></p><br><br><br><br>
+      <p><input type="submit" value="送信" class="ex3"></p>
+      <br><br><br><br>
     
 
       <script type="text/javascript">
